<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:id="@+id/magnitude_view"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:textColor="@color/white"
            android:background="@drawable/circle_magnitude"
            android:text="@string/magnitude_example"
            />
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">


                        <TextView
                            android:id="@+id/location_view2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/locationoffset"
                            android:textColor="@color/textColorEarthquakeDetails"
                            android:textSize="12sp"
                            android:textAllCaps="true"
                            />

                        <TextView
                            android:id="@+id/location_view1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_delhi"
                            android:textColor="@color/textColorEarthquakeLocation"
                            android:maxLines="2"
                            android:textSize="16sp"

                            />



                </LinearLayout>


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginStart="16dp"
    android:orientation="vertical"  >

        <TextView
            android:id="@+id/date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12_dec_2020"
            android:maxLines="1"
            android:textColor="@color/textColorEarthquakeDetails"
            android:textSize="12sp"
            android:layout_gravity="end"
            />


        <TextView
            android:id="@+id/time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_00pm"
            android:layout_gravity="end"
            android:textSize="12sp"
            android:textColor="@color/textColorEarthquakeDetails"/>

        </LinearLayout>


</LinearLayout>




</com.google.android.material.card.MaterialCardView>

